<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.storagesharedpreference.sab.storagesharedpreference.SecondActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:id="@+id/dataemail"
           android:text="@string/ur_email"
           android:gravity="center"
           />
       <EditText
           android:id="@+id/edit_email"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_margin="20dp"
           android:gravity="center"/>

   </LinearLayout>
  <LinearLayout
      android:id="@+id/linepass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="50dp"
          android:id="@+id/datapass"
          android:text="@string/ur_pass"
          android:gravity="center"

          />

      <EditText
          android:id="@+id/edit_pass"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_margin="20dp"
          android:gravity="center"/>

  </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linebtn1"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:text="@string/edit"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linebtndel"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:text="@string/delete"/>


</LinearLayout>
